--- a/php.ini
+++ b/php.ini
@@ -1,3 +1,5 @@
-display_errors = Off
-log_errors = On
+display_errors = 0
+display_startup_errors = 0
+error_reporting = 2147483647
 error_log = /dev/stderr
+log_errors = 1
